objects/dbu_Email_Content__c.object
<CustomObject>
    <fields>
        <fullName>CC_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Product Name</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>dbu_Email_Content</relationshipLabel>
        <relationshipName>dbu_Email_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dbu_Customer_Contact__c</fullName>
        <description>this field holds value of customer contact name from dbu_emailer. Contain value Only for loggedin user</description>
        <formula>dbu_Emailer__r.dbu_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>this field holds value of customer contact name from dbu_emailer. Contain value Only for loggedin user</inlineHelpText>
        <label>dbu_Customer_Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Emailer_Email_Address__c</fullName>
        <label>dbu_Emailer_Email_Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>dbu_Emailer__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <label>dbu Emailer</label>
        <referenceTo>dbu_Emailer__c</referenceTo>
        <relationshipLabel>dbu_Email_Content</relationshipLabel>
        <relationshipName>dbu_Email_Content</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dbu_NotifyMe_Email_Sending_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notify me Email not yet sent, but process is started</description>
        <label>dbu_NotifyMe_Email_Sending_Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_NotifyMe_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notify Me email is sent to customer</description>
        <label>dbu_NotifyMe_Email_Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Product_Inventory_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_Product_Inventory_Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Product_Name__c</fullName>
        <formula>CC_Product_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dbu_Product_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Product_Price__c</fullName>
        <label>dbu_Product_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dbu_Product_URI__c</fullName>
        <description>holds Product URI</description>
        <inlineHelpText>holds Product URI</inlineHelpText>
        <label>dbu_Product_URI</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>dbu_Store_Country__c</fullName>
        <description>dbu_emailer store country</description>
        <formula>dbu_Emailer__r.dbu_Store_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>dbu_emailer store country</inlineHelpText>
        <label>dbu_Store_Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Store_Language__c</fullName>
        <description>dbu_emailer store language</description>
        <formula>dbu_Emailer__r.dbu_Store_Language__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>dbu_emailer store language</inlineHelpText>
        <label>dbu_Store_Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_WishlistItem_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>dbu_WishlistItem_ID</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipLabel>dbu_Email_Content</relationshipLabel>
        <relationshipName>dbu_Email_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dbu_for_NotifyMe_Email__c</fullName>
        <description>checked if dbu_emailer record for notify me email only</description>
        <formula>dbu_Emailer__r.dbu_Email_for_NotifyMe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>checked if dbu_emailer record for notify me email only</inlineHelpText>
        <label>dbu_for_NotifyMe_Email</label>
        <type>Checkbox</type>
    </fields>
    <label>dbu_Email_Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>dbu_Email_Content_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>dbu_Email_Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>